--- a/src/5Aug/LeaderBoard.css
+++ b/src/5Aug/LeaderBoard.css
@@ -1,7 +1,15 @@
 body{
     background-color:bisque;
 }
-
+.Head{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    background-color: beige;
+    text-align: center;
+}
+.checked{
+    color: orange;
+}
    
     
 
@@ -22,7 +30,7 @@ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida San
 .sub-heading-2{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.rank,.name,.age,.scores{
+.rank,.name,.age,.scores,.rating{
     background-color: aquamarine;
     padding:25px;
 }
